--- a/myface-onface-html/package.json
+++ b/myface-onface-html/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myface",
-  "version": "0.0.0",
+  "name": "myface-onface",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "gulp": "latest",
@@ -11,6 +11,6 @@
     "del": "latest"
   },
   "devDependencies": {
-    "gulp-util": "^3.0.7"
+    "gulp-util": "^3.6.0"
   }
 }
